2001-03-14  Derek Price  <derek.price@openavenue.com>

	* Makefile.in: Regenerated

2001-02-20  Larry Jones  <larry.jones@sdrc.com>

	* cvs.texinfo (BUGS): There's only one company listed now, not two.

2001-02-13  Larry Jones  <larry.jones@sdrc.com>

	* cvs.texinfo (Password authentication server, First import): Use
	@ref instead of @xref when not at the beginning of a sentence.

2001-02-01  Larry Jones  <larry.jones@sdrc.com>

	* cvs.texinfo (Connection): Add still more notes about common
	pserver error messages.

2001-01-18  Derek Price  <derek.price@openavenue.com>

	* cvs.texinfo (Quick reference to CVS commands): add index entry for
	version subcommand

2001-01-18  Larry Jones  <larry.jones@sdrc.com>

	* cvs.texinfo (log options): Document new :: syntax for -r.

2001-01-10  Derek Price  <derek.price@openavenue.com>

	* Makefile.am (CVSvn.texi): specify $(srcdir) explicitly in target rule
	so CVSvn.texi gets built properly for all makes.
	(cvs_TEXINFOS): specify $(srcdir) explicitly for CVSvn.texi
	(cvsclient_TEXINFOS): ditto
	* Makefile.in: regenerated

2000-12-26  Derek Price  <derek.price@openavenue.com>

	* Makefile.in: update timestamp
	* CVSvn.texi: ditto

2000-12-26  Derek Price  <derek.price@openavenue.com>

	* Makefile.am: new target for creation of CVSvn.texi
	(EXTRA_DIST): add CVSvn.texi.in & CVSvn.texi
	* Makefile.in: Regenerated
	* CVSvn.texi: new file
	* .cvsignore: remove CVSvn.texi since it is now included in dist

2000-12-22  Derek Price  <derek.price@openavenue.com>

	* Makefile.in: Regenerated

2000-12-21  Derek Price  <derek.price@openavenue.com>

	* cvs-paper.ps: Backout accidental regeneration.

2000-12-21  Derek Price  <derek.price@openavenue.com>

	* .cvsignore: Added *.pdf versions of the *.ps docs
	* CVSvn.texi.in: Use configure to generate CVSvn.texi
	* Makefile.am: New file needed by Automake
	* Makefile.in: Regenerated
	* cvs-paper.ps: Regenerated
	* texinfo.tex: New file added to placate Automake.  Apparently, its